--- a/framework/_base.scss
+++ b/framework/_base.scss
@@ -1,3 +1,8 @@
+*, *:before, *:after {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 body {
 	font-size: 16px;
 	line-height: 1.5;
